--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "ape-project",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "private": true,
+    "homepage": "",
     "dependencies": {
-        "@craco/craco": "^7.1.0",
-        "@million/lint": "^0.0.73",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -14,10 +13,11 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint:js": "eslint src/**/*.{js,jsx}"
     },
     "eslintConfig": {
         "extends": [
