--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@babel/plugin-transform-private-property-in-object": "^7.24.1",
+        "@babel/preset-react": "^7.24.1",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.1"
     }
