--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-modal": "^3.16.1",
         "react-scripts": "5.0.1",
         "react-slick": "^0.30.2",
+        "react-svg": "^16.1.33",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.8",
         "use-media": "^1.5.0",
