--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/styled-components": "^5.1.34",
         "formik": "^2.4.5",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
@@ -15,7 +16,6 @@
         "react-modal": "^3.16.1",
         "react-scripts": "5.0.1",
         "react-slick": "^0.30.2",
-        "react-svg": "^16.1.33",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.8",
         "use-media": "^1.5.0",
